# portier-broker

./: .gitignore  .travis.yml  AUTHORS.rst  Cargo.toml  Dockerfile  LICENSE-MIT  Procfile  README.md  README.rst  app.json  build-docker.sh  build.rs  clippy.toml  config.toml.dist  flake.nix  mktlds.rb  msgfmt.sh  optimize-svgs.sh  protocol.md  release.sh  test.json
.cargo/: config
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/actions/prep-linux-cross/: action.yml  main.js
.github/workflows/: audit.yml  build.yml  daily.yml  deploy.yml  release.yml  upgrade_deps.yml
contrib/gcp/: .gitignore  README.md  portier.jinja  portier.jinja.schema  portier.yaml.dist
docs/: build.md  integrations.md  key-management.md
docs/storage/: redis.md  sqlite.md
docs/systemd/: README.md  portier-broker.service  portier-broker.socket
lang/: de.mo  de.po  en.mo  en.po  fr.mo  fr.po  fr_CA.mo  fr_CA.po  nl.mo  nl.po
res/static/: confirm_email.js  fragment_callback.js  login_hint.js  rewrite_to_post.js  style.css
src/: config.rs  config_serde.in.rs  crypto.rs  crypto_serde.in.rs  email.rs  email_address.rs  email_bridge.rs  error.rs  handlers.rs  http.rs  http_ext.rs  lib.rs  lib.rs.in  macros.rs  main.rs  metrics.rs  oidc.rs  oidc_bridge.rs  pemfile.rs  router.rs  serde_helpers.rs  serde_types.in.rs  store.rs  store_cache.rs  store_limits.rs  validation.rs  web.rs  webfinger.rs
src/agents/: fetch.rs  mod.rs
src/agents/key_manager/: manual.rs  mod.rs  rotating.rs
src/agents/mailer/: lettre_sendmail.rs  lettre_smtp.rs  mailgun.rs  mod.rs  postmark.rs  sendgrid.rs
src/agents/store/: memory.rs  mod.rs  redis.rs  rusqlite.rs
src/bridges/: email.rs  mod.rs  oidc.rs
src/config/: env.rs  i18n.rs  limits.rs  mod.rs  string_list.rs  templates.rs  toml.rs
src/handlers/: auth.rs  callback.rs  confirm.rs  email.rs  index.rs  keys.rs  mod.rs  normalize.rs  oauth2.rs  oidc.rs  oidc_config.rs  pages.rs  rewrite_to_post.rs  token.rs  welcome.rs
src/keys/: manual_keys.rs  mod.rs  rotating_keys.rs
src/middleware/: headers.rs  logging.rs  mod.rs  origin.rs
src/providers/: gmail.rs  mod.rs  smtp.rs
src/store/: memory.rs  mod.rs  redis.rs
src/utils/: agent.rs  base64url.rs  delay_queue_task.rs  domain_validator.rs  fetch_json_cached.rs  http.rs  keys.rs  limit_config.rs  logger.rs  mod.rs  pem.rs  real_ip.rs  rng.rs  sd_notify.rs  time.rs  tlds.rs
src/utils/redis/: locking.rs  mod.rs  pubsub.rs
static/: forward.js  style.css
tests/e2e/: README.md  main.js  main.ts  package-lock.json  package.json  tsconfig.json
tests/e2e/src/: broker.js  broker.ts  env.js  env.ts  http-mailer.ts  mailServer.js  mailbox.js  mailbox.ts  mailhog.js  main.ts  relying-party.js  relying-party.ts  sendmail.sh  tests.js  tests.ts
tmpl/: confirm_device.mustache  confirm_email.mustache  email_html.mustache  email_text.mustache  error.mustache  forward.mustache  fragment_callback.mustache  login_hint.mustache  rewrite_to_post.mustache
