[package]
name = "portier_broker"
version = "0.9.2"
authors = ["The Portier project contributors"]
description = "Reference implementation of the Portier broker protocol"
homepage = "http://portier.io"
repository = "https://github.com/portier/portier-broker"
readme = "README.md"
license = "MIT/Apache-2.0"
rust-version = "1.72"
edition = "2021"

[features]
default = ["rustls", "rsa", "redis", "rusqlite", "lettre_smtp", "lettre_sendmail", "postmark", "mailgun", "sendgrid"]
insecure = []
lettre_smtp = ["lettre", "lettre/smtp-transport"]
lettre_sendmail = ["lettre", "lettre/sendmail-transport"]
postmark = []
mailgun = []
native-tls = ["hyper-tls", "reqwest/native-tls", "lettre?/native-tls"]
rsa = ["dep:rsa", "rand_core"]
rustls = ["dep:rustls", "hyper-rustls", "reqwest/rustls-tls-native-roots", "lettre?/rustls-tls", "lettre?/rustls-native-certs"]
sendgrid = []

[[bin]]
name = "portier-broker"
path = "src/main.rs"

[profile.release]
overflow-checks = true

[dependencies]
accept-language = "3.0.1"
base64 = "0.22.0"
bytes = "1.0.1"
docopt = "1.1.0"
envy = "0.4.1"
futures-util = "0.3.16"
gettext = "0.4.0"
headers = "0.4.0"
http = "1.0.0"
http-body-util = "0.1.0"
hyper-staticfile = "0.10.0"
idna = "0.5.0"
ipnetwork = "0.20.0"
listenfd = "1.0.0"
mustache = "0.9.0"
percent-encoding = "2.1.0"
serde_json = "1.0.57"
thiserror = "1.0.26"
toml = "0.8.0"

[dependencies.combine]
version = "4.6"
default-features = false
features = ["std"]

[dependencies.ctrlc]
version = "3.2.1"
features = ["termination"]

[dependencies.email_address]
version = "0.2.3"
default-features = false

[dependencies.hyper]
version = "1.0.0"
default-features = false
features = ["http1", "server"]

[dependencies.hyper-rustls]
optional = true
version = "0.27.0"

[dependencies.hyper-tls]
optional = true
version = "0.6.0"

[dependencies.hyper-util]
version = "0.1.1"
features = ["tokio"]

[dependencies.lettre]
optional = true
version = "0.11.1"
default-features = false
features = ["builder"]

[dependencies.log]
version = "0.4.11"
features = ["std", "release_max_level_info"]

[dependencies.rand_core]
optional = true
version = "0.6.4"

[dependencies.redis]
optional = true
version = "0.25.3"
default-features = false
features = ["script", "tokio-comp"]

[dependencies.reqwest]
version = "0.12.3"
default-features = false
features = ["macos-system-configuration"]

# Alias ring -> aws-lc-rs.
# Both are nearly API compatible, and Rustls also switched backends.
# Going along with rustls means we can drop the ring dependency.
[dependencies.ring]
package = "aws-lc-rs"
version = "1.6.4"

[dependencies.rsa]
optional = true
version = "0.9.0"
default-features = false

[dependencies.rusqlite]
optional = true
version = "0.31.0"
features = ["bundled"]

[dependencies.rustls]
optional = true
version = "0.23.4"

[dependencies.serde]
version = "1.0.139"
features = ["derive"]

[dependencies.tokio]
version = "1.13.0"
features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"]

[dependencies.hickory-resolver]
version = "0.24.0"
default-features = false
features = ["tokio-runtime"]

[dependencies.url]
version = "2.1.1"
features = ["serde"]

# Per `rsa` crate docs, significantly speeds up key generation for debug builds.
[profile.dev.package.num-bigint-dig]
opt-level = 3
