[package]
name = "portier_broker"
version = "0.11.0"
authors = ["The Portier project contributors"]
description = "Reference implementation of the Portier broker protocol"
homepage = "http://portier.io"
repository = "https://github.com/portier/portier-broker"
readme = "README.md"
license = "MIT/Apache-2.0"
rust-version = "1.72"
edition = "2021"

[features]
default = ["rustls", "redis", "rusqlite", "lettre_smtp", "lettre_sendmail", "postmark", "mailgun", "sendgrid"]
insecure = []
lettre_smtp = ["lettre", "lettre/smtp-transport"]
lettre_sendmail = ["lettre", "lettre/sendmail-transport"]
postmark = []
mailgun = []
native-tls = ["hyper-tls", "reqwest/native-tls", "lettre?/native-tls"]
rustls = ["dep:rustls", "hyper-rustls", "reqwest/rustls-tls-native-roots", "lettre?/rustls-tls", "lettre?/rustls-native-certs"]
sendgrid = []

[[bin]]
name = "portier-broker"
path = "src/main.rs"

[profile.release]
overflow-checks = true

[dependencies]
accept-language = "3.0.1"
base64 = "0.22.0"
bytes = "1.0.1"
docopt = "1.1.0"
envy = "0.4.1"
futures-util = "0.3.16"
gettext = "0.4.0"
headers = "0.4.0"
http = "1.0.0"
http-body-util = "0.1.0"
hyper-staticfile = "0.10.0"
idna = "1.0.0"
ipnetwork = "0.20.0"
listenfd = "1.0.0"
mustache = "0.9.0"
percent-encoding = "2.1.0"
serde_json = "1.0.57"
thiserror = "1.0.26"
toml = "0.8.0"

[dependencies.combine]
version = "4.6"
default-features = false
features = ["std"]

[dependencies.ctrlc]
version = "3.2.1"
features = ["termination"]

# TODO: https://github.com/johnstonskj/rust-email_address/issues/30
[dependencies.email_address]
version = "=0.2.8"
default-features = false

[dependencies.hyper]
version = "1.0.0"
default-features = false
features = ["http1", "server"]

[dependencies.hyper-rustls]
optional = true
version = "0.27.0"

[dependencies.hyper-tls]
optional = true
version = "0.6.0"

[dependencies.hyper-util]
version = "0.1.1"
features = ["tokio"]

[dependencies.lettre]
optional = true
version = "0.11.1"
default-features = false
features = ["builder"]

[dependencies.log]
version = "0.4.11"
features = ["std", "release_max_level_info"]

[dependencies.redis]
optional = true
version = "0.27.2"
default-features = false
features = ["script", "tokio-comp"]

[dependencies.reqwest]
version = "0.12.3"
default-features = false
features = ["macos-system-configuration"]

[dependencies.aws-lc-rs]
version = "1.6.4"

[dependencies.rusqlite]
optional = true
version = "0.31.0"
features = ["bundled"]

[dependencies.rustls]
optional = true
version = "0.23.4"

[dependencies.serde]
version = "1.0.139"
features = ["derive"]

[dependencies.tokio]
version = "1.13.0"
features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"]

[dependencies.hickory-resolver]
version = "0.24.0"
default-features = false
features = ["tokio-runtime"]

[dependencies.url]
version = "2.1.1"
features = ["serde"]
